--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,15 @@
- target_sources(${TARGET_NAME_LIB} PRIVATE 
- hello.hxx
- hello.cxx
- )
+IF(INTERFACE_LIBRARY)
+    target_sources(${TARGET_NAME_LIB} INTERFACE 
+    hello.hpp
+    hello.ipp
+    allTheIppFiles.cpp
+    allTheIppFiles.hpp
+)
+ELSE()
+    target_sources(${TARGET_NAME_LIB} PUBLIC 
+    hello.hpp
+    hello.ipp
+    allTheIppFiles.cpp
+    allTheIppFiles.hpp
+)
+ENDIF()
